# Haskell-in-Depth

./: README.md  notes.md  todo.txt  tt.csv
ch01/: README.md
ch01/Version1/: Version1.cabal
ch01/Version1/app/: Main.hs
ch01/Version2/: Version2.cabal
ch01/Version3/: Version3.cabal
ch01/Version3/app/: Main.hs
ch01/vocab1/: README.md  Vocab1.cabal  vocab1.cabal
ch01/vocab1/app/: Main.hs
ch01/vocab2/: Vocab2.cabal  vocab2.cabal
ch01/vocab2/app/: Main.hs
ch01/vocab3/: README.md  Vocab3.cabal  vocab3.cabal
ch01/vocab3/app/: Main.hs
ch02/: README.md  ch02.cabal  dirs.txt  turns.txt
ch02/apps/person/: derived-show.hs  implemented-show.hs  text-show.hs
ch02/apps/radar/: radar.hs
ch02/libs/contexts/: Contexts.hs
ch02/libs/person/: Person.hs
ch02/libs/radar/: Radar.hs
ch02/tests/radar/: Test.hs
ch03/stockquotes/: README.md  stockquotes.cabal
ch03/stockquotes/app/: Charts.hs  HtmlReport.hs  Main.hs  Params.hs  QuoteData.hs  StatReport.hs
ch04/: README.md
ch04/containers-mini/: Bench.hs  README.md  TestQueue.hs  TestStack.hs  containers-mini.cabal  package.yaml
ch04/containers-mini/Data/: Deque.hs  Queue.hs  Stack.hs
ch05/: README.md  ch05.cabal  gcd.hs  ioref.hs
ch05/app/: countzeros.hs  dicegame.hs  filecount.hs  gcd.hs  genSQL.hs  ioref.hs  maybe.hs  reader.hs  stref.hs  sumlist.hs  weapons.hs
ch06/: README.md
ch07/: README.md  ch07.cabal
ch07/app/: div.hs  logging.hs
ch09/: README.md  ch09.cabal  unboxed.hs
ch09/benchmarks/: primcheck.hs
ch09/isprime/: IsPrime.hs  IsPrimeUnfolded.hs
ch10/: README.md  ch09.cabal  isprime.html  unboxed.hs
ch10/benchmarks/: primcheck.hs
ch10/isprime/: IsPrime.hs  IsPrimeUnfolded.hs  Main.hs
ch11/: README.md  ch11.cabal
ch11/dynvalues-gadt/: dynvalues-gadt.hs
ch11/nummod-rank-n/: Main.hs  NumUtils.hs
ch11/temperature/: TempPhantom.hs  UnitNameProxies.hs  UnitNameTypeApps.hs  temp-kinds.hs  temp-proxies.hs  temp-type-apps.hs
ch11/type-families/: Graphs.hs  Main.hs  SimplifyWiden.hs  Unescape.hs  XListable.hs
ch11/type-lits/: Main.hs  Pointers.hs  SuffixedStrings.hs
ch11/type-operators/: type-operators.hs
ch12/: README.md  ch12.cabal
ch12/deriv/: basic-deriv.hs  coerce.hs  newtype.hs  strategies.hs  via.hs
ch12/genSQL/: GenericSQL.hs  Main.hs
ch12/generics/: view-generic.hs
ch12/rpc/lib/: ClientUtils.hs  DeclsGenerator.hs  RemoteIO.hs  RemoteParser.hs  RpcCommon.hs  ServerUtils.hs
ch12/rpc/ping/: PingCommon.hs  client.hs  server.hs
ch12/th/hello/: Hello.hs  Main.hs
ch12/th/mstr-lits/: Main.hs  Str.hs
ch12/th/predicates/: Main.hs  Predicates.hs
ch12/th/projectors/: Main.hs  Projectors.hs
ch13/: README.md  ch13.cabal
ch13/api/: Api0.hs  Api1.hs  Api2.hs  Api3.hs  ApiServant.hs
ch13/doors/: SingGen.hs  SingManual.hs
ch13/elevator/: UseSafe.hs  UseUnsafe.hs
ch13/elevator/Elevator/: LowLevel.hs  Safe.hs  Unsafe.hs
ch13/elevator/Elevator/Safe/: Floor.hs  Moves.hs  Operations.hs
ch14/: README.md  ch14.cabal  chars.hs  copy.hs  csv-simple.hs  lens-ex.hs  simple-streaming.hs  stream.hs  sumtab.hs
ch14/covid/: CovidCSVParser.hs  CovidData.hs  Main.hs
ch15/: README.md  cabal.project.local  ch15.cabal
ch15/FilmInfo/: FilmInfoData.hs  FilmInfoFromField.hs
ch15/hasql/: DBActions.hs  Main.hs  Sessions.hs  Statements.hs
ch15/hdbc/: hdbc.hs
ch15/opaleye/: DBActions.hs  Main.hs  Queries.hs  Tables.hs
ch15/pg-simple/: pg-simple.hs
ch16/: README.md  async-exc.hs  ch16.cabal  conc-hello.hs  dots-async-cancel.hs  dots-async-interrupted.hs  dots-async.hs  dots-stm.hs  dots.hs  interleaving.hs  mvar-deadlocks.hs  ordered-threads.hs  pub-sub.hs  sum-numbers-many-workers.hs  sum-numbers.hs  tree-async.hs  wait-completion.hs
data/films/: README.md
du/: README.md  du.cabal
du/app/: App.hs  AppRTWTST.hs  AppRWST.hs  AppTypes.hs  DirTree.hs  DiskUsage.hs  FileCounter.hs  Main.hs  Utils.hs
expr/: README.md  expr.cabal
expr/apps/: prefix-postfix.hs
expr/gadts/: Main.hs
expr/libs/: Expr.hs  ShuntingYard.hs
expr/rpn/: EvalRPN.hs  EvalRPNExcept.hs  EvalRPNTrans.hs  EvalRPNTrans2.hs  MyMaybeT.hs  evalrpn1.hs  evalrpn2.hs  evalrpn3.hs  rpnexpr.hs
ip-filter/: README.md  ip-filter.cabal
ip-filter/benchmarks/: Bench.hs  BenchBuildIP.hs  BenchBuildIPGroups.hs  BenchLookupIP.hs  BenchParseIP.hs  BenchRanges.hs  Data.hs  NFUtils.hs
ip-filter/data/: genips.txt
ip-filter/data/tests/iplookup/: 1.out.golden  2.out.golden
ip-filter/lookup/: FastLookup.hs  IPTypes.hs  LookupIP.hs  Main.hs  ParseIP.hs
ip-filter/prof/: iplookup-simulation.hs
ip-filter/tests/iplookup/: GoldenTests.hs  LookupIPSpec.hs  ParseIPSpec.hs  Props.hs  Test.hs
ip-filter/tests/iplookup-doctest/: Doctests.hs
stockquotes/: Example.html  README.md  modules.dot  stockquotes.cabal
stockquotes/app/: HtmlReport.hs
suntimes/: README.md  config.json  suntimes.cabal
suntimes/app/: App.hs  GeoCoordsReq.hs  Main.hs  ProcessRequest.hs  STExcept.hs  SunTimes.hs  Types.hs
suntimes/data/: rester-export-postman.json  ssrequests.txt  strequests.txt
tests/expr/: Test1.hs
tests/radar/: Test.hs
