cabal-version:      2.4
name:               ch02
version:            0.1.0.0
author:             Michael Kohlhaas
maintainer:         michael.kohlhaas@chammy.info

library radar-lib
  exposed-modules:  Contexts
                    Radar
  hs-source-dirs:   libs/contexts
                    libs/radar
  build-depends:    base ^>=4.14.3.0,
                    mtl
  default-language: Haskell2010

executable person-derived
  main-is:          derived-show.hs
  other-modules:    Person
  hs-source-dirs:   apps/person
                    libs/person
  build-depends:    base ^>=4.14.3.0
  default-language: Haskell2010

executable person-implemented
  main-is:          implemented-show.hs
  other-modules:    Person
  hs-source-dirs:   apps/person
                    libs/person
  build-depends:    base ^>=4.14.3.0
  default-language: Haskell2010

executable person-text
  main-is:          text-show.hs
  other-modules:    Person
  hs-source-dirs:   apps/person,
                    libs/person
  build-depends:    base ^>=4.14.3.0,
                    text-show
  default-language: Haskell2010

executable radar
  main-is:          radar.hs
  other-modules:    Radar
  hs-source-dirs:   apps/radar
                    libs/radar
  other-extensions: DeriveAnyClass
  build-depends:    base ^>=4.14.3.0,
                    fmt
  default-language: Haskell2010

test-suite radar-test
  type:             exitcode-stdio-1.0
  main-is:          Test.hs
  hs-source-dirs:   tests/radar
  build-depends:    base ^>=4.14.3.0,
                    radar-lib,
                    random
  default-language: Haskell2010
