cabal-version: 2.4
name:          ch02
version:       0.1.0.0

library radar-lib
    exposed-modules:
        Contexts
        Radar

    hs-source-dirs:     libs/contexts libs/radar
    default-language:   Haskell2010
    default-extensions: UnicodeSyntax
    build-depends:
        base ^>=4.14.3.0,
        mtl >=2.2.2 && <2.3

executable person-derived
    main-is:            derived-show.hs
    hs-source-dirs:     apps/person libs/person
    other-modules:      Person
    default-language:   Haskell2010
    default-extensions: UnicodeSyntax
    build-depends:      base ^>=4.14.3.0

executable person-implemented
    main-is:            implemented-show.hs
    hs-source-dirs:     apps/person libs/person
    other-modules:      Person
    default-language:   Haskell2010
    default-extensions: UnicodeSyntax
    build-depends:      base ^>=4.14.3.0

executable person-text
    main-is:            text-show.hs
    hs-source-dirs:     apps/person libs/person
    other-modules:      Person
    default-language:   Haskell2010
    default-extensions: UnicodeSyntax
    build-depends:
        base ^>=4.14.3.0,
        text-show >=3.9.7 && <3.10

executable radar
    main-is:            radar.hs
    hs-source-dirs:     apps/radar libs/radar
    other-modules:      Radar
    default-language:   Haskell2010
    default-extensions: UnicodeSyntax
    other-extensions:   DeriveAnyClass
    build-depends:
        base ^>=4.14.3.0,
        fmt >=0.6.3 && <0.7

test-suite radar-test
    type:               exitcode-stdio-1.0
    main-is:            Test.hs
    hs-source-dirs:     tests/radar
    default-language:   Haskell2010
    default-extensions: UnicodeSyntax
    build-depends:
        base ^>=4.14.3.0,
        radar-lib -any,
        random -any
