cabal-version: 2.4
name:          ch11
version:       0.1.0.0

executable dynvalues-gadt
    main-is:            dynvalues-gadt/dynvalues-gadt.hs
    default-language:   Haskell2010
    default-extensions: UnicodeSyntax
    other-extensions:   GADTs
    build-depends:      base >=4.14.3.0 && <4.15

executable nummod-rank-n
    main-is:            Main.hs
    hs-source-dirs:     nummod-rank-n
    other-modules:      NumUtils
    default-language:   Haskell2010
    default-extensions: UnicodeSyntax
    other-extensions:   RankNTypes
    build-depends:      base >=4.14.3.0 && <4.15

executable temp-kinds
    main-is:            temp-kinds.hs
    hs-source-dirs:     temperature
    default-language:   Haskell2010
    default-extensions: UnicodeSyntax
    other-extensions:
        AllowAmbiguousTypes GeneralizedNewtypeDeriving PolyKinds
        ScopedTypeVariables TypeApplications

    build-depends:      base >=4.14.3.0 && <4.15

executable temp-proxies
    main-is:            temp-proxies.hs
    hs-source-dirs:     temperature
    other-modules:
        TempPhantom
        UnitNameProxies

    default-language:   Haskell2010
    default-extensions: UnicodeSyntax
    other-extensions:
        GeneralizedNewtypeDeriving InstanceSigs PolyKinds
        ScopedTypeVariables

    build-depends:      base >=4.14.3.0 && <4.15

executable temp-type-apps
    main-is:            temp-type-apps.hs
    hs-source-dirs:     temperature
    other-modules:
        TempPhantom
        UnitNameTypeApps

    default-language:   Haskell2010
    default-extensions: UnicodeSyntax
    other-extensions:
        AllowAmbiguousTypes GeneralizedNewtypeDeriving PolyKinds
        ScopedTypeVariables TypeApplications

    build-depends:      base >=4.14.3.0 && <4.15

executable type-families
    main-is:            Main.hs
    hs-source-dirs:     type-families
    other-modules:
        Graphs
        SimplifyWiden
        Unescape
        XListable

    default-language:   Haskell2010
    default-extensions: UnicodeSyntax
    other-extensions:   FlexibleInstances TypeFamilies
    build-depends:
        base >=4.14.3.0 && <4.15,
        containers >=0.5 && <0.7

executable type-lits
    main-is:            Main.hs
    hs-source-dirs:     type-lits
    other-modules:
        Pointers
        SuffixedStrings

    default-language:   Haskell2010
    default-extensions: UnicodeSyntax
    other-extensions:   DataKinds KindSignatures ScopedTypeVariables
    build-depends:      base >=4.14.3.0 && <4.15

executable type-operators
    main-is:            type-operators/type-operators.hs
    default-language:   Haskell2010
    default-extensions: UnicodeSyntax
    other-extensions:   NoStarIsType TypeOperators
    build-depends:      base >=4.14.3.0 && <4.15
