cabal-version: 2.4
name:          ch14
version:       0.1.0.0

executable chars
    main-is:            chars.hs
    default-language:   Haskell2010
    default-extensions: UnicodeSyntax
    build-depends:
        base >=4.14.3.0 && <4.15,
        streaming >=0.2.2 && <0.4

executable copy
    main-is:            copy.hs
    default-language:   Haskell2010
    default-extensions: UnicodeSyntax
    build-depends:
        base >=4.14.3.0 && <4.15,
        filepath >=1.4.1 && <1.5,
        resourcet ==1.2.*,
        streaming >=0.2.2 && <0.4,
        streaming-bytestring >=0.1.7 && <0.3

executable covid
    main-is:            Main.hs
    hs-source-dirs:     covid
    other-modules:
        CovidCSVParser
        CovidData

    default-language:   Haskell2010
    default-extensions: UnicodeSyntax
    build-depends:
        attoparsec ==0.13.*,
        base >=4.14.3.0 && <4.15,
        bytestring >=0.10 && <0.12,
        containers >=0.5 && <0.7,
        lens >=4.17 && <4.20,
        resourcet ==1.2.*,
        streaming >=0.2.2 && <0.4,
        streaming-bytestring >=0.1.7 && <0.3,
        streaming-utils ==0.2.*,
        text ==1.2.*,
        text-show >=3.0 && <4,
        time >=1.8 && <1.12

executable csv-simple
    main-is:            csv-simple.hs
    default-language:   Haskell2010
    default-extensions: UnicodeSyntax
    build-depends:
        attoparsec ==0.13.*,
        base >=4.14.3.0 && <4.15,
        bytestring >=0.10 && <0.12,
        resourcet ==1.2.*,
        streaming >=0.2.2 && <0.4,
        streaming-bytestring >=0.1.7 && <0.3,
        streaming-utils ==0.2.*,
        text ==1.2.*

executable lens-ex
    main-is:            lens-ex.hs
    default-language:   Haskell2010
    default-extensions: UnicodeSyntax
    build-depends:
        base >=4.14.3.0 && <4.15,
        lens >=4.17 && <4.20

executable simple-streaming
    main-is:            simple-streaming.hs
    default-language:   Haskell2010
    default-extensions: UnicodeSyntax
    build-depends:      base >=4.14.3.0 && <4.15

executable stream
    main-is:            stream.hs
    default-language:   Haskell2010
    default-extensions: UnicodeSyntax
    build-depends:      base >=4.14.3.0 && <4.15

executable sumtab
    main-is:            sumtab.hs
    default-language:   Haskell2010
    default-extensions: UnicodeSyntax
    build-depends:
        base >=4.14.3.0 && <4.15,
        extra >=1.5 && <1.8,
        streaming >=0.2.2 && <0.4,
        text ==1.2.*,
        text-show >=3.0 && <4
