cabal-version: 2.4
name:          du
version:       0.0.1.0

executable du
    main-is:            Main.hs
    hs-source-dirs:     app
    other-modules:
        App
        AppRTWTST
        AppRWST
        AppTypes
        DirTree
        DiskUsage
        FileCounter
        Utils

    default-language:   Haskell2010
    default-extensions: RecordWildCards NamedFieldPuns OverloadedStrings
    other-extensions:   GeneralizedNewtypeDeriving
    build-depends:
        base >=4.12 && <4.15,
        directory ==1.3.*,
        extra >=1.5 && <1.8,
        filepath >=1.4.1 && <1.5,
        mtl >=2.0 && <2.3,
        optparse-applicative >=0.14 && <0.17,
        text ==1.2.*,
        text-show >=3.0 && <4,
        unix-compat ==0.5.*
