cabal-version: 2.4
name:          expr
version:       0.1.0.0
maintainer:    michael.kohlhaas@chammy.info
author:        Michael Kohlhaas

library expr-lib
    exposed-modules:
        Expr
        EvalRPNTrans
        ShuntingYard

    hs-source-dirs:   libs rpn
    default-language: Haskell2010
    build-depends:
        base -any,
        mtl -any,
        text-show -any

executable prefix-postfix
    main-is:          prefix-postfix.hs
    hs-source-dirs:   apps
    default-language: Haskell2010
    build-depends:
        base >=4.14.3.0 && <4.15,
        mtl >=2.2.2 && <2.3,
        expr-lib -any,
        text-show >=3.9.7 && <3.10

executable evalrpn1
    main-is:          evalrpn1.hs
    hs-source-dirs:   rpn
    other-modules:    EvalRPN
    default-language: Haskell2010
    build-depends:
        base >=4.12 && <4.15,
        mtl >=2.0 && <2.3

executable evalrpn2
    main-is:          evalrpn2.hs
    hs-source-dirs:   rpn
    other-modules:    EvalRPNTrans
    default-language: Haskell2010
    build-depends:
        base >=4.12 && <4.15,
        mtl >=2.0 && <2.3

executable evalrpn3
    main-is:          evalrpn3.hs
    hs-source-dirs:   rpn
    other-modules:
        MyMaybeT
        EvalRPNTrans2

    default-language: Haskell2010
    other-extensions:
        FlexibleInstances MultiParamTypeClasses UndecidableInstances
        InstanceSigs LambdaCase

    build-depends:
        base >=4.12 && <4.15,
        mtl >=2.0 && <2.3,
        transformers ==0.5.*

executable rpnexpr
    main-is:          rpnexpr.hs
    hs-source-dirs:   rpn
    other-modules:    EvalRPNExcept
    default-language: Haskell2010
    build-depends:
        base >=4.12 && <4.15,
        mtl >=2.0 && <2.3,
        text >=1.2 && <1.3,
        text-show >=3.0 && <4,
        transformers >=0.5 && <0.6
