cabal-version: 2.4
name:          ip-filter
version:       0.1.0.0
data-files:
    data/benchmarks/1.iprs
    data/benchmarks/2.iprs
    data/benchmarks/3.iprs

library ipgen-lib
    exposed-modules:    GenIP
    hs-source-dirs:     gen
    default-language:   Haskell2010
    default-extensions: UnicodeSyntax
    build-depends:
        base ^>=4.14.3.0,
        hedgehog >=0.5 && <1.1,
        iplookup-lib -any

library iplookup-lib
    exposed-modules:
        IPTypes
        LookupIP
        ParseIP
        FastLookup

    hs-source-dirs:     lookup
    default-language:   Haskell2010
    default-extensions: UnicodeSyntax
    other-extensions:   TypeApplications
    build-depends:
        base ^>=4.14.3.0,
        fingertree >=0.1 && <0.2,
        split >=0.2 && <0.3

executable ipgen
    main-is:            gen/Main.hs
    default-language:   Haskell2010
    default-extensions: UnicodeSyntax
    build-depends:
        base >=4.14.3.0 && <4.15,
        exceptions ==0.10.*,
        hedgehog >=0.5 && <1.1,
        ipgen-lib -any,
        optparse-applicative >=0.14 && <0.17

executable iplookup
    main-is:            lookup/Main.hs
    default-language:   Haskell2010
    default-extensions: UnicodeSyntax
    build-depends:
        base >=4.14.3.0 && <4.15,
        exceptions ==0.10.*,
        iplookup-lib -any,
        optparse-applicative >=0.14 && <0.17

executable iplookup-simulation
    main-is:            iplookup-simulation.hs
    hs-source-dirs:     prof
    default-language:   Haskell2010
    default-extensions: UnicodeSyntax
    build-depends:
        base >=4.14.3.0 && <4.15,
        iplookup-lib -any

test-suite iplookup-doctest
    type:               exitcode-stdio-1.0
    main-is:            Doctests.hs
    hs-source-dirs:     tests/iplookup-doctest
    default-language:   Haskell2010
    default-extensions: UnicodeSyntax
    build-depends:
        base >=4.14.3.0 && <4.15,
        doctest >=0.20.0 && <0.21,
        split ==0.2.*

test-suite iplookup-test
    type:               exitcode-stdio-1.0
    main-is:            Test.hs
    hs-source-dirs:     tests/iplookup
    other-modules:
        GoldenTests
        LookupIPSpec
        ParseIPSpec
        Props

    default-language:   Haskell2010
    default-extensions: UnicodeSyntax
    build-depends:
        base >=4.14.3.0 && <4.15,
        filepath >=1.4.1 && <1.5,
        hedgehog >=0.5 && <1.1,
        ipgen-lib -any,
        iplookup-lib -any,
        tasty >=0.11 && <1.5,
        tasty-golden ==2.3.*,
        tasty-hedgehog >=0.1 && <1.1,
        tasty-hspec ==1.1.*

benchmark iplookup-bench
    type:               exitcode-stdio-1.0
    main-is:            Bench.hs
    hs-source-dirs:     benchmarks
    other-modules:
        BenchBuildIP
        BenchBuildIPGroups
        BenchLookupIP
        BenchParseIP
        BenchRanges
        Data
        NFUtils
        Paths_ip_filter

    default-language:   Haskell2010
    default-extensions: UnicodeSyntax
    build-depends:
        base >=4.14.3.0 && <4.15,
        criterion >=1.4 && <1.6,
        deepseq >=1.3 && <1.5,
        iplookup-lib -any
