cabal-version: 2.4
name:          suntimes
version:       0.1.0.0

executable suntimes
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:
        App
        GeoCoordsReq
        ProcessRequest
        STExcept
        SunTimes
        Types

    default-language: Haskell2010
    build-depends:
        aeson >=1.2 && <1.6,
        base >=4.14.3.0 && <4.15,
        bytestring >=0.10 && <0.12,
        exceptions ==0.10.*,
        http-client >=0.4 && <0.8,
        mtl >=2.0 && <2.3,
        optparse-applicative >=0.14 && <0.17,
        req >=2.0 && <3.10,
        text ==1.2.*,
        time >=1.8 && <1.12,
        transformers ==0.5.*
