cabal-version:      2.4
name:               Vocab2
version:            0.1.0.0
author:             Michael Kohlhaas
maintainer:         michael.kohlhaas@chammy.info

executable vocab
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
                     ,text
    hs-source-dirs:   app
    default-language: Haskell2010
