cabal-version: 2.4
name:          containers-mini
version:       0.1.0.0
maintainer:    michael.kohlhaas@chammy.info
author:        Michael Kohlhaas

library
    exposed-modules:
        Data.Stack
        Data.Deque
        Data.Queue

    default-language: Haskell2010
    build-depends:
        base >=4.14.3.0 && <4.15,
        containers ==0.6.*

test-suite stack
    type:             exitcode-stdio-1.0
    main-is:          TestStack.hs
    other-modules:    Data.Stack
    default-language: Haskell2010
    build-depends:
        base >=4.14.3.0 && <4.15,
        containers ==0.6.*

test-suite queue
    type:             exitcode-stdio-1.0
    main-is:          TestQueue.hs
    other-modules:
        Data.Queue
        Data.Deque

    default-language: Haskell2010
    build-depends:
        base >=4.14.3.0 && <4.15,
        containers ==0.6.*

benchmark bench
    type:             exitcode-stdio-1.0
    main-is:          Bench.hs
    other-modules:
        Data.Stack
        Data.Deque

    default-language: Haskell2010
    build-depends:
        base >=4.14.3.0 && <4.15,
        containers ==0.6.*,
        timeit ==2.0.*
